feat: Cleanup Test Classes and Dependencies - Meeds-io/MIPs#42 - EXO-62860 Prior to this change, the service testing was using powermock which is useless and restrictive in term of third party libraries dependency tree (complex to maintain with Java versions higher than JDK11).